@@ -236,3 +236,4 @@ zapret-auto: per_instance_condition orchestrator
 zapret-auto: "instances" argument in condition orchestrator
 zapret-auto: cond_tcp_has_ts, cond_lua iff functions
 zapret-lib: replay_execution_plan and plan_clear max parameter
+init.d: use bitmap:port ipset for standard dports
